--- a/frontend/src/app/pages/menu-principal/components/pines/pines.component.html
+++ b/frontend/src/app/pages/menu-principal/components/pines/pines.component.html
@@ -27,5 +27,16 @@
     <div class="crear-boton">
       <button (click)="crearTorneo()">CREAR TORNEO AMERICANO</button>
     </div>
+
+    <div class="separador"></div>
+
+    <div class="crear-boton">
+      <button (click)="inicioCampeonato()">CAMPEONATO INTERNO</button>
+    </div>
+    <div class="separador"></div>
+
+    <div class="crear-boton">
+      <button (click)="seleccionCampeonato()">CAMPEONATO INTERNO quedo mal</button>
+    </div>
   </section>
 </main>
